--- a/web/package.json
+++ b/web/package.json
@@ -21,12 +21,7 @@
     "lint": "eslint ./src --fix",
     "type-check": "tsc"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
   "devDependencies": {
     "@types/node": "^20.4.6",
     "@types/react": "^18.2.18",
@@ -34,24 +29,10 @@
     "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.14",
-<<<<<<< HEAD
-    "cross-env": "^7.0.3",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.8"
-=======
-<<<<<<< Updated upstream
-    "cross-env": "^5.2.0",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
-    "vite": "^3.2.6"
-=======
     "cross-env": "^7.0.3",
     "postcss": "^8.4.27",
     "react-intersection-observer": "^9.5.2",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.8"
->>>>>>> Stashed changes
->>>>>>> de66712 (WIP)
   }
 }
