--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "wiggles-pages",
-  "version": "0.1.0",
+  "name": "integration-vite-plugin-cloudflare-template",
+  "version": "0.0.0",
   "private": true,
+  "sideEffects": false,
+  "type": "module",
   "scripts": {
-    "dev": "pnpm run -r dev",
-    "lint": "pnpm run -r lint"
+    "dev": "react-router dev",
+    "build": "react-router build",
+    "typecheck": "react-router typegen && tsc"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "isbot": "^5.1.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^7.4.1",
+    "serialize-javascript": "^6.0.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "eslint": "^8.46.0",
-    "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
-    "prettier": "^3.0.1",
-    "typescript": "^5.1.6"
+    "@cloudflare/vite-plugin": "^0.1.9",
+    "@cloudflare/workers-types": "^4.20250214.0",
+    "@react-router/dev": "^7.4.1",
+    "@react-router/fs-routes": "^7.4.1",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.38.0",
+    "typescript": "^5.1.6",
+    "vite": "^6.1.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^3.109.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "engines": {
+    "node": ">=20.0.0"
   },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json}": [
-      "pnpm lint",
-      "git add"
-    ]
-  }
+  "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6"
 }
