--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"dev": "react-router dev",
 		"postinstall": "npm run cf-typegen",
 		"preview": "pnpm run build && vite preview",
-		"typecheck": "npm run cf-typegen && react-router typegen && tsc -b"
+		"typecheck": "npm run cf-typegen && react-router typegen && tsc -b",
+		"populate:local": "zx scripts/populate-local.mjs"
 	},
 	"dependencies": {
 		"isbot": "^5.1.27",
@@ -21,6 +22,8 @@
 		"@cloudflare/vite-plugin": "^1.0.12",
 		"@react-router/dev": "^7.7.1",
 		"@tailwindcss/vite": "^4.1.4",
+		"@faker-js/faker": "^9.0.0",
+		"zx": "^8.1.8",
 		"@types/node": "^20",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
@@ -30,5 +33,5 @@
 		"vite-tsconfig-paths": "^5.1.4",
 		"wrangler": "^4.28.1"
 	},
-	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
+	"packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706"
 }
