--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,7 +12,22 @@
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
+	"d1_databases": [
+		{
+			"binding": "DB",
+			"database_name": "wiggles",
+			"database_id": "REPLACE_WITH_YOUR_D1_ID",
+			"migrations_dir": "migrations"
+		}
+	],
+	"r2_buckets": [
+		{
+			"binding": "IMAGES",
+			"bucket_name": "wiggles-images",
+			"preview_bucket_name": "wiggles-images"
+		}
+	]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
